syntax = "proto3";

package noaascpc;

message ForceOverrideHourlyRequest {
    string station = 1;
    string start = 2;
    string end = 3;
}

message ForceOverrideHourlyResponse {
    string err = 1;
}


service NoaaScraperSVC {
    rpc ForceOverrideHourly(ForceOverrideHourlyRequest) returns (ForceOverrideHourlyResponse) {}
}


